fixed images stretching

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -984,8 +984,7 @@ p {
   justify-content: space-around;
 }
 #chooseAClassPics IMG{
-  height:100%;
-  max-height: 100%;
+  height:12vmin;
   padding-right: 2vw;
 }
 #defeatEnemies{
@@ -1004,8 +1003,7 @@ p {
   justify-content: space-around;
 }
 #defeatEnemiesPics IMG{
-  height: 100%;
-  max-height:100%;
+  height: 10vmin;
   object-fit: contain;
 }
 #collectLoot{
@@ -1021,11 +1019,10 @@ p {
   max-width: 100%;
   display: flex;
   justify-content: space-around;
-  padding-right: 2vw;
+  padding-right: 2vmin;
 }
 #collectLootPics IMG{
-  height: 100%;
-  max-height:100%;
+  height: 10vmin;
   object-fit: contain;
 }
 #reachLevel10{
